Updates of the day 06.28.2023

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
             </ul>
         </header>
 
+        <div class="bg-image">
+            <div id="img-text">
+                <h1 class="text-center">CONQUER</h1>
+                <h5 class="text-center">Simple Bootstrap Template</h5>
+            </div>
+
+        </div>
+
     </div>
 
     <!-- Bootstrap 4 -->
