Updates of the day 07.11.2023

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label>
                     Your name:
                     <br>
-                    <input type="text" name="name" data-rules="required">
+                    <input type="text" name="name" data-rules="required|min=2">
                 </label>
 
                 <br><br>
@@ -33,12 +33,12 @@
                 <label>
                     Your password:
                     <br>
-                    <input type="password" name="password" data-rules="required">
+                    <input type="password" name="password">
                 </label>
 
                 <br><br>
                 <label>
-                    <input type="submit" value="Register" class="btn btn-success">
+                    <input type="submit" value="Register">
                 </label>
 
                 <br><br>
