Updates of the day 07.11.2023

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 <label>
                     Your e-mail:
                     <br>
-                    <input type="text" name="email" data-rules="required">
+                    <input type="text" name="email" data-rules="required|email">
                 </label>
 
                 <br><br>
                 <label>
                     Your password:
                     <br>
-                    <input type="password" name="password">
+                    <input type="password" name="password" data-rules="required|min=4">
                 </label>
 
                 <br><br>
